<?xml version="1.0"?>
<package format="2">
  <name>usv_msgs</name>
  <version>0.0.0</version>
  <description>The usv_msgs package</description>

  <maintainer email="xx@todo.todo">xx</maintainer>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  
</package>
